Adds sharing files and updates location in index.html

--- a/story_integration2/index.html
+++ b/story_integration2/index.html
@@ -216,7 +216,7 @@
 	//		alert("Data: " + data + " Status: " + status);
 	//	});
 		$.ajax({
-				url: 'load.php', //use the load php page to get the stuff from the database
+				url: 'Sharing Framework/edith/functions/load.php', //use the load php page to get the stuff from the database
 				type: 'GET',	//get the information from the php page (the stuff that is echo in the php file);
 				success: function(data) { //if it worked alert the data
 					alert(data);
