--- a/AnimationIntegration2/caller.html
+++ b/AnimationIntegration2/caller.html
@@ -1,6 +1,6 @@
 <script src="animationBlocks.js"></script>
 	<p><a target="_blank" href = 'API/api.html'>API </a></p>	
-<canvas id="myCanvas" width="800" height="400" style = "border:solid; position:none"></canvas
+<canvas id="myCanvas" width="800" height="400" style = "border:solid; position:none"></canvas>
 <html><head></head><body>
 
 	<script>
@@ -66,7 +66,7 @@
 
 	function animateAll()
 	{
-		var sprites = [];
+		var sprites = [mario, luigi, bowser];
 		//animateBowser();
 		//animateLuigi();
 		//animatieMario();
