--- a/story_integration2/index.html
+++ b/story_integration2/index.html
@@ -21,62 +21,59 @@
 </head>
 
 <body>
-		<div id="logo">
-			<img src="EdithLogoName.png" width=50% height=50% >
-		</div>
-		<div class="animationContainer">
-			<canvas id="mainCanvas" width="800"height="400"></canvas>
-		</div>
+	<div id="logo">
+		<img src="EdithLogoName.png" width=50% height=50% >
+	</div>
+
+	<div class="animationContainer">
+		<canvas id="mainCanvas"></canvas>
+	</div>
 		
-		<div class="objectContainer">
-			  	<canvas id="objectCanvas"> </canvas>
+	<div class="objectContainer">
+		<canvas id="objectCanvas"> </canvas>
 
-				<div id="tabs">
-  					<ul>
-    					<li><a href="#tabs-1">Objects</a></li>
-    					<li><a href="#tabs-2">Methods</a></li>
-  					</ul>
-  				<div id="tabs-1">
-  					<script defer="defer">
-  					var stage = new Kinetic.Stage({
-			        container: 'tabs-1',
-			        width: 540,
-			        height: 200
-			      });
+		<div id="tabs">
+  			<div id="tabs-1">
+  				<script defer="defer">
+  				var stage = new Kinetic.Stage({
+			    container: 'tabs-1',
+			    width: 540,
+			    height: 300
+			    });
 
-			      var layer2 = new Kinetic.Layer();
-			      var imageObj = new Image();
-			      var imageObj2 = new Image();
-			      var imageObj3 = new Image();
-					imageObj.onload = function() {
-					  var image = new Kinetic.Image({
-					    x: 10,
-					    y: 50,
-					    image: imageObj,
-					    width: 100,
-					    height: 100,
-					    listening: true
-					  });
+			    var layer2 = new Kinetic.Layer();
+			    var imageObj = new Image();
+			    var imageObj2 = new Image();
+			    var imageObj3 = new Image();
+				imageObj.onload = function() {
+					var image = new Kinetic.Image({
+					x: 10,
+					y: 50,
+					image: imageObj,
+					width: 100,
+					height: 100,
+					listening: true
+					});
 
-					 var image2 = new Kinetic.Image({
-					    x: 110,
-					    y: 50,
-					    image: imageObj2,
-					    width: 100,
-					    height: 100,
-					    listening: true
-					  });
+					var image2 = new Kinetic.Image({
+					x: 110,
+					y: 50,
+					image: imageObj2,
+					width: 100,
+					height: 100,
+					listening: true
+					});
 
 					var image3 = new Kinetic.Image({
-					    x: 210,
-					    y: 50,
-					    image: imageObj3,
-					    width: 100,
-					    height: 100,
-					    listening: true
-					  });
+					x: 210,
+					y: 50,
+					image: imageObj3,
+					width: 100,
+					height: 100,
+					listening: true
+					});
 
-			      var rect = new Kinetic.Rect({
+			      	var rect = new Kinetic.Rect({
 			        x: 310,
 			        y: 50,
 			        width: 100,
@@ -85,19 +82,19 @@
 			        stroke: 'black',
 			        strokeWidth: 4,
 			        listening: true
-			      });
+			      	});
 
-			      image.on('dblclick', function() {
-        			addSprite(getCanvas(), 'kitten.png', 100, 100, (window.innerWidth / 2.5), (window.innerHeight / 3.75));
+			      	image.on('dblclick', function() {
+        				addSprite(getCanvas(), 'kitten.png', 100, 100, (window.innerWidth / 2.5), (window.innerHeight / 3.75));
 
       				});
 
-			      image2.on('dblclick', function() {
-        			addSprite(getCanvas(), 'mario.jpg', 100, 100, (window.innerWidth / 2.5), (window.innerHeight / 3.75));
+			      	image2.on('dblclick', function() {
+        				addSprite(getCanvas(), 'mario.jpg', 100, 100, (window.innerWidth / 2.5), (window.innerHeight / 3.75));
       				});
 
-			      image3.on('dblclick', function() {
-        			 addSprite(getCanvas(), 'luigi.jpg', 100, 100, (window.innerWidth / 2.5), (window.innerHeight / 3.75));
+			      	image3.on('dblclick', function() {
+        				 addSprite(getCanvas(), 'luigi.jpg', 100, 100, (window.innerWidth / 2.5), (window.innerHeight / 3.75));
       				});
 
 				  layer2.add(image);
@@ -133,19 +130,21 @@
 			  imageObj5.src = src;
 			}
   			</script>
-  		<div id="tabs-2">
-    		<p>Methods</p>
-  		</div>
 
-  	</div>
+  		</div>
 
   	</div>
 		</div>
 
 		<div class="VEContainer">
-			<div id="container">
-				<canvas id="VECanvas"></canvas>
+
+			<canvas id = "VECanvas"></canvas>
+
+			<div id= 'tabs'>
+			<div id='container1'>
+				
 			</div>
+		</div>
 		</div>
 
 		
@@ -155,6 +154,7 @@
 	objectCanvas.width = (window.innerWidth / 1.8);
 	objectCanvas.height = (window.innerHeight / 2.9);
 	VECanvas.width = (window.innerWidth / 2.4);
+	VECanvas.height = (window.innerHeight/1.06);
 
 	var oCanvasElement = wrapHTMLCanvasToOcanvas(document.getElementById("mainCanvas"), '#FFFFFF');  //get the OCanvas so we can animate
 
