--- a/story_integration2/index.html
+++ b/story_integration2/index.html
@@ -305,7 +305,7 @@
 <div class="buttons">
  <button id="button1" onclick = 'play()'>Play</button>
  <button id="button2" onclick = 'pauseAll()'>Pause</button>
- <button id="button3" onclick = 'popitup("object_creator/example.html")'>Make Object</button>
+ <button id="button3" onclick = 'popitup("../object_creator_integration_2/ObjectCreation.html")'>Make Object</button>
  <button id="button4" onClick = 'save()'>Save</button>
  <button id="button5" onClick = 'load()'>Load</button>
 </div>
