Merges in correct changes for loading images

--- a/story_integration2/index.html
+++ b/story_integration2/index.html
@@ -41,8 +41,8 @@
 			    width: 540,
 			    height: 300
 			    });
-
-			     var glow = [];
+ 				var layer2 = new Kinetic.Layer();
+			    var glow = [];
 			
 			var curImgs = [];
 			  function addImage(src, theX, theY)
