--- a/story_integration2/index.html
+++ b/story_integration2/index.html
@@ -35,74 +35,8 @@
 
 		<div id="tabs">
   			<div id="tabs-1">
-  				<script defer="defer">
-  				var stage = new Kinetic.Stage({
-			    container: 'tabs-1',
-			    width: 540,
-			    height: 300
-			    });
- 				var layer2 = new Kinetic.Layer();
-			    var glow = [];
-			
-			var curImgs = [];
-			  function addImage(src, theX, theY)
-			  {
-			  		var imgObj = new Image();
-					imgObj.onload = function() {
-					  var img = new Kinetic.Image({
-					    x: theX,
-					    y: theY,
-					    image: imgObj,
-					    width: 100,
-					    height: 100,
-					    listening: true,
-					    filter: Kinetic.Filters.Brighten,
-         				filterBrightness: 0
-					  });
-
-					layer2.add(img);
-				 	stage.add(layer2);
-
-				 	img.on('click', function() {
-			      	if(glow.indexOf(img) >= 0)
-			      	{
-			      		var x = glow.indexOf(img);
-			      		glow.splice(x, 1);
-			      		img.setFilterBrightness(0);
-			      		layer2.batchDraw();
-			      	}
-			      	else {
-			      		glow.push(img);
-			      		img.setFilterBrightness(100);
-			      		layer2.batchDraw();
-			      	}
-			      });
-
-				};
-				imgObj.src = src;
-			    console.log(imgObj.src);
-			}
-
-			var imgs = ["mario.jpg", "luigi.jpg", "kitten.png", "mario.jpg", "luigi.jpg", "mario.jpg"];
-
-			var x = 100;
-			var y = 50;
-			for(var i = 0; i < imgs.length; i++)
-			{
-			  addImage(imgs[i], x, y);
-			  if(x > 300)
-			  {
-			  	x = 100;
-			  	y += 100;
-			  }
-			  else
-			  {
-			  x += 100;
-			  }
-			}
-
-
-  			</script>
+  				<script src = "objectPanel.js" defer="defer" type="text/javascript">
+  				</script>
 
   		</div>
 
