calls proper play method

--- a/story_integration2/index.html
+++ b/story_integration2/index.html
@@ -11,7 +11,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
 
 	<script src = 'object_creator/jfile.js' type = 'text/javascript' ></script>
-	<script src='Animation/animationBlocks.js' type = 'text/javascript' ></script>
+	<script src='../Animation/animationBlocks.js' type = 'text/javascript' ></script>
 	
 	<script src= 'dataRequests.js' type = 'text/javascript'></script>
 
@@ -153,7 +153,7 @@
 	
 </script>
 <div class="buttons">
- <button id="button1" onclick = 'play()'>Play</button>
+ <button id="button1" onclick = 'main(UNIVERSAL_MAIN)'>Play</button>
  <button id="button2" onclick = 'pauseAll()'>Pause</button>
  <button id="button3" onclick = 'popitup("../object_creator_integration_2/ObjectCreation.html")'>Make Object</button>
  <button id="button4" onClick = 'save()'>Save</button>
