--- a/story_integration2/index.html
+++ b/story_integration2/index.html
@@ -11,7 +11,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
 
 	<script src = 'object_creator/jfile.js' type = 'text/javascript' ></script>
-	<script src='../Animation/animationBlocks.js' type = 'text/javascript' ></script>
+	<script src='Animation/animationBlocks.js' type = 'text/javascript' ></script>
 	
 	<script src= 'dataRequests.js' type = 'text/javascript'></script>
 
@@ -85,13 +85,14 @@
 	/**
 	/	Loads the information that the load.php page gives
 	**/
-	function load(){
+	function load(projectId){
 	//$.get("load.php", function(data, status){//issue a get request for the php page 'load.php"  
 	//		alert("Data: " + data + " Status: " + status);
 	//	});
 		$.ajax({
-				url: 'Sharing Framework/edith/functions/load.php', //use the load php page to get the stuff from the database
+				url: 'functions/load.php', //use the load php page to get the stuff from the database
 				type: 'GET',	//get the information from the php page (the stuff that is echo in the php file);
+				data: id = "testName",
 				success: function(data) { //if it worked alert the data
 					alert(data);
 				},
@@ -100,6 +101,15 @@
 				}
 		});
 	}
+	
+	
+	function loadProject(projectId) {
+	$.getJSON("functions/load.php", {id:projectId}, function(data) {
+		$("#theText").html(data.pCode);
+		alert(data);
+	});
+}
+
 	/**
 	/Save the information for save.php to put to the server's database
 	/
@@ -124,7 +134,7 @@
  <!-- <button id="button2" onclick = 'wait()'>Pause</button> -->
  <button id="button3" onclick = 'popitup("../object_creator_integration_3/kineticExample.html")'>Make Object</button>
  <button id="button4" onClick = 'save()'>Save</button>
- <button id="button5" onClick = 'load()'>Load</button>
+ <button id="button5" onClick = 'loadProject("testName")'>Load</button>
 </div>
 
 </body>
