--- a/object_creator_integration_3/ObjectCreation.html
+++ b/object_creator_integration_3/ObjectCreation.html
@@ -287,7 +287,7 @@
                         $.ajax({
                                 type: "POST",
                                 data: {
-                                    code: savedObjects
+                                    code: sendingArray
                                 },
                                 url: "functions\save.php"
                             });
@@ -300,9 +300,9 @@
                                 success: function() {
                                     alert("Exported successfully");
                                 }
-								error: function(){
+							/*	error: function(){
 									alert("error");
-								}
+								}*/
                             });
 					}
 							
