added more to the object creation pop-up

--- a/object_creator_integration_1/mockUpMain.html
+++ b/object_creator_integration_1/mockUpMain.html
@@ -4,7 +4,7 @@
 
 function popitup(url)
 {
-	newwindow=window.open(url, 'example.html', 'height = 200', 'width = 150');
+	newwindow=window.open(url, 'kineticExample.html', 'height = 400', 'width = 300');
 	if(window.focus){
 		newwindow.focus()
 	}
@@ -16,7 +16,7 @@ function popitup(url)
 </head>
 <body>
 
-<a href = 'example.html' onclick="return popitup('example.html')">
+<a href = 'kineticExample.html' onclick="return popitup('kineticExample.html')">
 Create Object
 </a>
 
