--- a/Trunk/index.html
+++ b/Trunk/index.html
@@ -83,6 +83,18 @@
 	}
 	
 	/**
+	Used to call the object creation pop-up window.
+	**/
+	function popitupObj(url)
+	{
+		newwindow=window.open(url, 'kineticExample.html', 'status = 1', 'scrollbars =1', 'height = 100', 'width = 300');
+		if(window.focus){
+			newwindow.focus()
+		}
+		return false;
+	}
+	
+	/**
 	/	Loads the information that the load.php page gives
 	**/
 	function load(projectId){
@@ -132,7 +144,7 @@
 <div class="buttons">
  <button id="button1" onclick = 'main(UNIVERSAL_MAIN)'>Play</button>
  <!-- <button id="button2" onclick = 'wait()'>Pause</button> -->
- <button id="button3" onclick = 'popitup("../object_creator_integration_3/kineticExample.html")'>Make Object</button>
+ <button id="button3" onclick = 'popitupObj("../object_creator_integration_3/kineticExample.html")'>Make Object</button>
  <button id="button4" onClick = 'save()'>Save</button>
  <button id="button5" onClick = 'loadProject("testName")'>Load</button>
 </div>
