fixing ajax again, object creation

--- a/object_creator_integration_3/ObjectCreation.html
+++ b/object_creator_integration_3/ObjectCreation.html
@@ -290,7 +290,7 @@
                                     code: sendingArray,
 									projectName: objectArrayName
                                 },
-                                url: "functions\save.php"
+                                url: "functions/save.php",
 								success: function() {
                                     alert("Exported successfully");
                                 }
