pop-up now points to new object creation page

--- a/object_creator_integration_3/mockUpMain.html
+++ b/object_creator_integration_3/mockUpMain.html
@@ -4,7 +4,7 @@
 
 function popitupObj(url)
 {
-	newwindow=window.open(url, 'kineticExample.html', 'status = 1', 'scrollbars =1', 'height = 100', 'width = 300');
+	newwindow=window.open(url, "ObjectCreation.html", "status = 1, scrollbars =1, height = 500, width = 500");
 	if(window.focus){
 		newwindow.focus()
 	}
@@ -16,7 +16,7 @@ function popitupObj(url)
 </head>
 <body>
 
-<a href = 'kineticExample.html' onclick="return popitupObj('kineticExample.html')">
+<a href = 'ObjectCreation.html' onclick="return popitupObj('ObjectCreation.html')">
 Create Object
 </a>
 
