--- a/Trunk/index.html
+++ b/Trunk/index.html
@@ -86,7 +86,7 @@
 	**/
 	function popitupObj(url)
 	{
-		newwindow=window.open(url, 'object_creator/ObjectCreation.html', 'status = 1', 'scrollbars =1', 'height = 100', 'width = 300');
+		newwindow=window.open(url, "object_creator/ObjectCreation.html", "status = 1, scrollbars =1, height = 600, width = 900");
 		if(window.focus){
 			newwindow.focus()
 		}
