updates with help pop-up

--- a/Trunk/object_creator/mockUpMain.html
+++ b/Trunk/object_creator/mockUpMain.html
@@ -4,7 +4,7 @@
 
 function popitup(url)
 {
-	newwindow=window.open(url, 'example.html', 'height = 200', 'width = 150');
+	newwindow=window.open(url, "ObjectCreation.html", "location = 1, status = 1, height = 600, width = 900");
 	if(window.focus){
 		newwindow.focus()
 	}
@@ -16,7 +16,7 @@ function popitup(url)
 </head>
 <body>
 
-<a href = 'example.html' onclick="return popitup('example.html')">
+<a href = 'ObjectCreation.html' onclick="return popitup('ObjectCreation.html')">
 Create Object
 </a>
 
