--- a/Trunk/index.html
+++ b/Trunk/index.html
@@ -6,7 +6,7 @@
 	<script src="http://d3lp1msu2r81bx.cloudfront.net/kjs/js/lib/kinetic-v4.7.2.min.js"></script>
 	<script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
 	<script src='Visual Editor/visualEditorCanvas.js' type = 'text/javascript'></script>
-	<script src='sortable.js' type = 'text/javascript'></script>
+	<script src='Visual Editor/sortable.js' type = 'text/javascript'></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
 
