--- a/Trunk/index.html
+++ b/Trunk/index.html
@@ -134,7 +134,11 @@
 				}
 		});
 	}
+	function glowingObjects(){
+		var glowingObjects = getGlowingObjects();
+		console.log(glowingObjects);
 	
+	}
 	
 	function loadThatThing(){
 			//var theJson = {"keys": }
@@ -163,6 +167,7 @@
  <button id="button4" onClick = 'save()'>Save</button>
  <button id="button5" onClick = 'loadProject()'>Load</button>
   <button id="button6" onClick = 'loadThatThing()'>Load Circle</button>
+  <button id="button7" onClick = 'glowingObjects()'> Glow</button>
   <a href = "Sharing Framework/edith/functions/display.php" >Display Projects </a>
 </div>
 
