--- a/Trunk/object_creator/helpPopUp.html
+++ b/Trunk/object_creator/helpPopUp.html
@@ -30,12 +30,14 @@ Need Help Navigating the Canvas?
 	Negative integers will scale down the object.</li>
 
 	</br><b>Using Different Layers</b>
-	<li>***Adding, Clearing, Saving, Deleting, Loading****</li>
-	<li>***Label the "NONE" button****</li>
+	<li>***Adding, Clearing, Deleting****</li>
+	<li>***"NONE" button****</li>
 	
 	</br><b>Saving Objects</b>
-	<li>*Enter name of object to use in your story*</li>
-	<li>*How to call in story?*</li>
+	<li>First, click "Save All Objects"</li>
+	<li>Then, click "Export the Object"
+	<li>Exit the Object Creation window</li>
+	<li>Load your new object on the storyboard!</li>
 
 </body>
 </html>
