--- a/Trunk/object_creator/ObjectCreation.html
+++ b/Trunk/object_creator/ObjectCreation.html
@@ -333,7 +333,7 @@
                                     code: sendingArray,
 									projectName: objectArrayName
                                 },
-                                url: "functions/save.php",
+                                url: "../functions/save.php",
 								success: function() {
                                     alert("Exported successfully");
                                 }
