changes naming of files for better final project style

--- a/Trunk/mainPage.html
+++ b/Trunk/mainPage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="story_creator.css">
+	<link rel="stylesheet" type="text/css" href="mainPage.css">
 	
 	<script src="http://d3lp1msu2r81bx.cloudfront.net/kjs/js/lib/kinetic-v4.7.2.min.js"></script>
 	<script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
