--- a/Trunk/index.html
+++ b/Trunk/index.html
@@ -1,19 +1,22 @@
-
-
-<!-- 
-Code deirved from:
-http://www.daniweb.com/web-development/javascript-dhtml-ajax/code/330933/a-simple-html-login-page-using-javascript
- -->
-
+<!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="loginstyle.css">
-	<link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,700' rel='stylesheet' type='text/css'>
-	<link rel="shortcut icon" href="/favicon.ico">
-<title>
-Edith
-</title>
+	<link rel="stylesheet" type="text/css" href="story_creator.css">
+	<script src="http://d3lp1msu2r81bx.cloudfront.net/kjs/js/lib/kinetic-v4.7.2.min.js"></script>
+	<script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+	<script src='Visual Editor/visualEditorCanvas.js' type = 'text/javascript'></script>
+	<script src='Visual Editor/sortable.js' type = 'text/javascript'></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
+
+	<script src = 'object_creator/jfile.js' type = 'text/javascript' ></script>
+	<script src='Animation/animationBlocks.js' type = 'text/javascript' ></script>
+
+	<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
+	<script src="gui.js"> </script>
+
 </head>
+
 <body>
 	<div id="logo">
 		<img src="EdithLogoName.png" width=50% height=50% >
@@ -135,46 +138,9 @@ Edith
  <button id="button5" onClick = 'loadProject()'>Load</button>
   <button id="button6" onClick = 'loadThatThing()'>Load Circle</button>
   <a href = "Sharing Framework/edith/functions/display.php" >Display Projects </a>
-=======
-<div id="logo" width="300" height="120">
-	<img src="EdithLogoName.png">
-</div>
-<!-- <div id="bunny">
-	<img src="edithbunnywhite.png">
-</div> -->
-
-<div id="wrapper">
-<form name="login" class="login">
-	<div class="header">
-	<h1> Welcome to Edith!</h1>
-	<span>Please sign in to get started creating your totally awesome story.</span>
-</div>
-<div class="content">
-	<input class="input username" type="text" name="username" placeholder="Username"/>
-	<input type="password" name="password" class="input password" placeholder="Password"/>
-	<div class="footer">
-		<input type="submit" name="submit" value="Login" class="button" onclick="check(this.form)"/>
-		<input type="submit" name="submit" value="Register" class="register" />
-		</div>
-</form>
->>>>>>> f25920429523e3d08e1320447207c01156ee03da
 </div>
 
-<script language="javascript">
-function check(form)/*function to check userid & password*/
-{
- /*the following code checkes whether the entered userid and password are matching*/
- if(form.username.value == "test" && form.password.value == "test")
-  {
-    window.open('test.html', '_self')/*opens the target page while Id & password matches*/
- //    var myWindow = window.open("","_self");
-	// myWindow.document.write('test.html');
-  }
- else
- {
-   alert("Error Password or Username")/*displays error message*/
-  }
-}
-</script>
+
 </body>
+
 </html>
